attempting to fix spacing between paragraphs

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -78,3 +78,8 @@
 	@import 'layout/footer';
 	@import 'layout/wrapper';
 	@import 'layout/menu';
+
+
+p{
+	margin:0 0 1em 0
+}
